    debian-faq-zh for translations which are somewhat up to date and not yet
    available as Debian packages.  Use debhelper's dh_install to deal with these
    multiple packages: we now build-depend upon debhelper.  When at it, use
    dh_installdeb, dh_gencontrol, dh_md5sums and dh_builddep too.
  * debian/compat: enforce debhelper compatibility level 5.
  * Update the content of the FAQ files to their latest SVN
    versions, from svn.debian.org ddp/manuals/faq:
     - changes by joostvb, 2008-03-24 - 2008-03-29
        * uptodate.sgml: remove remark only relevant to < etch
        * software.sgml: do not explicitly mention lenny: make text more
          stable
        * compat.sgml: get rid of & in url: make sure typesetters do not
          choke on it
        * nexttime.sgml: remove obsolete entry on security
        * nexttime.sgml: add entry on d-i and on releasegoal "Dependency
          based boot sequence"
        * nexttime.sgml: port to netbsd is stalled, freebsd is getting
          better
        * nexttime.sgml: mention new armel port. update SuperH status. drop
          amd64: of course we support that: old news
        * nexttime.sgml: add some lenny release goals about i18n from
          http://release.debian.org/lenny/goals.txt
        * compat.sgml: Debian Etch is LSB certified. Thanks Stanislav
          Gromov for reporting this. (Closes: #473108)
        * faqinfo.sgml: faq moved from cvs to svn
        * redist.sgml: debian-ham is discontinued
        * contrib.sgml: the gnu system by fsf is no longer the planned
          gnu/hurd
        * support.sgml: do not repeat detailed instructions from
          http://www.debian.org/Bugs/Reporting. people should use reportbug
          anyway
        * support.sgml: fix typo
        * support.sgml: mention ftp as last way to get bug-reporting.txt:
          its no longer widely used
        * support.sgml: closed bugs are not removed but archived