@@ -4,12 +4,14 @@
 tmp = $(CURDIR)/debian/tmp
 docdir = $(tmp)/usr/share/doc/debian
 
+langs = de fr it zh_CN
+
 build: stamp-build
 stamp-build:
 	test -f Makefile -a -f debian/rules
-	$(MAKE) html text ps pdf
+	$(MAKE) html text ps pdf langs="$(langs)"
 	gzip -9 debian-faq.en.txt debian-faq.en.ps debian-faq.en.pdf
-	for l in de fr it zh_CN; do \
+	for l in $(langs); do \
           gzip -9 $$l/debian-faq.$$l.txt $$l/debian-faq.$$l.ps \
            $$l/debian-faq.$$l.pdf; \
         done
@@ -36,7 +38,7 @@ binary-indep: build
 	install -m 644 debian-faq.en.txt.gz debian-faq.en.ps.gz \
                     debian-faq.en.pdf.gz debian-faq.en.html/* $(docdir)/FAQ
 
-	for l in de fr it zh_CN; do \
+	for l in $(langs); do \
           install -m 755 -d $(docdir)/FAQ/$$l; \
           install -m 644 $$l/debian-faq.$$l.txt.gz $$l/debian-faq.$$l.ps.gz \
            $$l/debian-faq.$$l.pdf.gz $(docdir)/FAQ; \
