@@ -24,6 +24,7 @@ debian-faq (3.1.6) UNRELEASED; urgency=high
     multiple packages: we now build-depend upon debhelper.  When at it, use
     dh_installdeb, dh_gencontrol, dh_md5sums and dh_builddep too.
   * debian/compat: enforce debhelper compatibility level 5.
+  * debian/rules: build needed languages (de, fr, it and zh_CN) only.
   * Update the content of the FAQ files to their latest SVN
     versions, from svn.debian.org ddp/manuals/faq:
      - changes by joostvb, 2008-03-24 - 2008-03-29
